[JENKINS-68640] Fix z-index of #bottom-sticker vs. #top-sticker (#6613)

--- a/war/src/main/less/base/style.less
+++ b/war/src/main/less/base/style.less
@@ -469,7 +469,7 @@ div.behavior-loading {
   bottom: -1px;
   margin-left: -2rem;
   width: calc(100% + 4rem);   /* it needs to occupy the entire width or else the underlying content will see through */
-  z-index: 999;
+  z-index: 998; /* behind top-sticker */
 }
 
 .bottom-sticker-inner {
